[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "fastapi",
    "python-multipart",
    "deepface",
    "qdrant-client",
    "uvicorn",
    "pytest",
]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | datas
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".venv", "datas"]
