[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.13"
dependencies = [
    "fastapi==0.115.12",
    "python-multipart==0.0.20",
    "tensorflow==2.19.0",
    "tf-keras==2.19.0",
    "numpy==1.26.4",
    "deepface==0.0.93",
    "qdrant-client==1.13.3",
    "uvicorn==0.34.0",
    "pytest==8.3.5",
    "openai==1.73.0",
    "python-dotenv==1.1.0",
    "mcp[cli]==1.6",
    "httpx>=0.28.1",
]

[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | datas
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".git", ".venv", "datas"]
